scrollbar fixes

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   margin: auto 0;
   box-sizing: border-box;
 }
+html {
+  overflow-x: hidden;
+}
 
 h1,
 h2 {
@@ -105,14 +108,11 @@ main {
 }
 #details {
   min-height: 100%;
+  max-height: 640px;
+  overflow: hidden;
 }
 #detailsInfoBottom {
-  min-height: 44%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   color: white;
-
   background-color: rgba(142, 142, 142, 1);
 }
 #characterList > * {
@@ -141,16 +141,29 @@ main {
 }
 #detailsList,
 #detailsListBottom {
+  margin: 0;
   list-style: none;
   letter-spacing: 0.25rem;
   padding-left: 0.5rem;
-  margin: 1rem;
+}
+#detailsListBottom {
+  height: 210px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  max-width: inherit;
+  padding-bottom: 0.5rem;
+}
+#detailsListBottom > * {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-width: 350px;
 }
 #nameHeader,
 #planetHeader {
   margin: 0.5rem;
   font-size: 1.8rem;
-  letter-spacing: 0.25rem;
+  letter-spacing: 0.18rem;
 }
 footer {
   align-items: center;
